doc/build/docker/dockerfile样例/k8s-flannel.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-flannel-ds
  namespace: kube-system
  labels:
    tier: node
    app: flannel
spec:
  template:
    metadata:
      labels:
        tier: node
        app: flannel
    spec:
      hostNetwork: true
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        name: kube-flannel
        image: quay.io/coreos/flannel:v0.8.0-amd64
        command: ["/opt/bin/flanneld","--ip-masq","--kube-subnet-mgr"]
