doc/build/docker/dockerfile样例/k8s-secret-use.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    name: mypod
    image: busybox
    args:
      /bin/sh
      -c
      touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
