doc/build/docker/dockerfile样例/k8s-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: producer-consumer
spec:
  containers:
  - name: producer
    image: busybox
    volumeMounts:
      mountPath: /producer_dir
      name: shared-volume
    args:
      /bin/sh
      -c
      echo "hello world" > /producer_dir/hello; sleep 30000
  - name: consumer
    image: busybox
    volumeMounts:
      mountPath: /consumer_dir
      name: shared-volume
    args:
      /bin/sh
      -c
      cat /consumer_dir/hello; sleep 30000
  volumes:
    name: share-volume
    emptyDir: {}
#  volumes:
#    name: share-volume
#    hostPath:
#      path: /data/k8s
#  volumes:
#    name: share-volume
#    persistentVolumeClaim:
#      claimName: mypvc
