doc/build/docker/dockerfile样例/k8s-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-httpd
spec:
  podSelector:
    matchLabels:
      run: httpd
  ingress:                    ###ingress限制进入的流量
    from:
      podSelector:
        matchLabels:
          access: "true"
      ipBlack:
        cidr: 192.168.56.0/24
     ports:
       protocal: TCP
       port: 80
